# trident

./: .clanf-format  .gitignore  CMakeLists.txt  makefile
src/: trident.c
src/file/: file.c  file.h
src/lexer/: lexer.c  lexer.h  token.c  token.h
src/parser/: ast.h  parser.h
test/: hello_world.tri  test.tri
